06-eks-istio-argocd-starbucks/policies/kyverno/pss-restricted.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: pss-restricted
spec:
  validationFailureAction: Enforce
  rules:
  - name: disallow-privileged
    match: { resources: { kinds: ["Pod"] } }
    validate:
      message: "Privileged containers are not allowed"
      pattern:
        spec:
          containers:
          - securityContext:
              privileged: "false"
